# advent-2020

./: 01.py  01_2.py  02_1.py  02_2.py  03_01.py  03_02.py  04_1.py  04_2.py  05_1.py  05_2.py  06_01.py  06_02.py  07_1.py  07_2.py  08_1.py  08_2.py  09_1.py  09_2.py  12_1.py  12_2.py  13_1.py  13_2.py  pyproject.toml
data/: data_01.py
